client/scss/style.scss
body {
  font-family: 'Overlock SC', cursive;
  color: rgba(0, 0, 0, 0.65);
  background-color: #FBFBFB;
}

.heading {
  height: 65px;
  width: 100%;

  .heading-container {
    height: 100%;
    width: 100%;
  }

  .order {
    font-size: 75px;
    float: left;
    clear: none;
    position: relative;
    bottom: 13px;
  }

  .title {
    font-size: 30px;
    float: right;
    clear: none;
    position: relative;
    right: 3px;
    top: 34px;
    opacity: 1;
    transform: translateX(0px);
    display: block;
  }
}

.hexagram {
  width: 100%;
  margin: 0 auto;

  .line {
    height: 30px;
    margin: 20px 5px;
  }

  .divider {
    height: 0;
    margin: 30px;
  }

  .yin {
    background-color: rgba(0, 0, 0, 0.65);

    .center {
      background-color: #FBFBFB;
      width: 0;
      height: 32px;
      margin: 0 auto;
    }
  }

  .yang {
    background-color: rgba(0, 0, 0, 0.65);

    .center {
      background-color: #FBFBFB;
      width: 0;
      height: 32px;
      margin: 0 auto;
    }
  }
}

